# brainfuck

./: .gitignore  CMakeLists.txt  readme.md
boilerplate/: BASEPROGRAM.c
headers/: bf_config.h  file_read.h  gcc_templates.h
src/: bf_config.c  file_read.c  main.c
src/compile/headers/: c_templates.h  compile.h  file_output.h  transpile.h
src/compile/src/: compile.c  file_output.c  transpile.c
src/debug/headers/: debug.h  debug_commands.h  debug_display.h  debug_exit_codes.h  stdout_tracker.h
src/debug/src/: debug.c  debug_commands.c  debug_display.c  stdout_tracker.c
src/interpret/headers/: functions.h  interpret.h  interpreter_config.h
src/interpret/src/: functions.c  interpret.c
